--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,10 @@
         "ext-PDO": "*",
         "ext-pdo_mysql": "*",
         "ext-json": "*",
+        "ext-redis": "*",
         "psr/log": "1.*",
         "smarty/smarty": "~3.1",
-        "ext-redis": "*"
+        "catfan/Medoo": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0",
