--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "psr/log": "1.*",
         "smarty/smarty": "~3.1",
         "intervention/image": "2.*",
-        "pagerfanta/pagerfanta": "*"
+        "pagerfanta/pagerfanta": "*",
+        "ezyang/htmlpurifier": "^4.7"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0",
